--- a/style.css
+++ b/style.css
@@ -1,4 +1,21 @@
+.container {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
 
+h1 {
+	font-size: 72px;
+	font-family: Arial, sans-serif;
+	color: #ff2d2d;
+	margin-bottom: 50px;
+	text-align: center;
+	animation: pulsate 2s ease-out;
+	animation-iteration-count: infinite;
+}
 
 @keyframes pulsate {
 	0% {
