--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 #settings-btn {
-  background-color: Red; /* lägg till din önskade bakgrundsfärg */
+  background-color: #ff0d00; /* lägg till din önskade bakgrundsfärg */
   color: white; /* lägg till din önskade textfärg */
   padding: 10px 20px;
   border: none;
