--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 h1 {
 	font-size: 72px;
 	font-family: Arial, sans-serif;
-	color: #ff2d2d;
+	color: #c53838;
 	margin-bottom: 50px;
 	text-align: center;
 	animation: pulsate 2s ease-out;
